--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <head>
 	<!-- Info meta tags, important for social media + SEO -->
 	<title>MyServer - Official Website</title>
-	<meta name="description" content="MyServer is a new and awesome Minecraft server. You can join with the IP 'play.myserver.net'.">
-	<meta property="og:title" content="MyServer - Official Website Portal">
+	<meta name="description" content="Simon's SMP is a SMP server with a friendly community, and premium features. You can join with the IP 'mc.simonsmp.ga'.">
+	<meta property="og:title" content="Simon's SMP - Official Website Portal">
 	<meta property="og:site_name" content="MyServer">
-	<meta property="og:description" content="MyServer is a new and awesome Minecraft server. You can join with the IP 'play.myserver.net'.">
+	<meta property="og:description" content="Simon's SMP is a SMP server with a friendly community, and premium features. You can join with the IP 'mc.simonsmp.ga'.">
 	<meta property="og:image" content="https://bybilly.uk/portal/img/minecraft.jpg">
 	<meta property="og:url" content="https://bybilly.uk/">
 	<meta name="twitter:card" content="summary_large_image">
